--- a/src/main/resources/templates/profiles.html
+++ b/src/main/resources/templates/profiles.html
@@ -53,7 +53,7 @@
                 </tbody>
             </table>
             <div class="card-body p-5 text-center">
-                <a href="/admin/profiles/new" class="btn btn-outline-secondary btn-lg">New</a>
+                <a href="/admin/profiles/new" class="btn btn-outline-secondary btn-lg">Añadir</a>
             </div>
         </div>
     </div>
