--- a/src/main/resources/templates/admin/census/new.html
+++ b/src/main/resources/templates/admin/census/new.html
@@ -22,7 +22,7 @@
                     <div class="card-body p-5">
                         <h2 class="text-uppercase text-center mb-5">Registro en el censo de DAT</h2>
 
-                        <form action="#" th:action="@{/admin/profiles/new}" th:object="${censusMemberForm}" method="POST">
+                        <form action="#" th:action="@{/admin/census/new}" th:object="${censusMemberForm}" method="POST">
 
                             <div class="form-outline mb-3">
                                 <label class="form-label" for="name">Nombre:</label>
