--- a/src/main/resources/templates/admin/jd/index.html
+++ b/src/main/resources/templates/admin/jd/index.html
@@ -57,7 +57,7 @@
 						<div class="card-body">
 							<h5 class="card-title">JD 06/03/2023</h5>
 							<h6 class="card-subtitle mb-2 text-muted">Extraordinaria</h6>
-							<p class="card-text">Se trataron temas telativos a .....</p>
+							<p class="card-text">Se trataron temas relativos a .....</p>
 							<a href="#" class="card-link">Acta</a>
 							<a href="#" class="card-link">Documentación</a>
 							<a href="/admin/assistance" class="card-link">Asistencia</a>
@@ -82,27 +82,29 @@
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<form>
+					<form action="#" th:action="@{/admin/jd}" th:object="${JDForm}" method="POST">
 						<div class="mb-3">
 							<label for="exampleFormControlInput1" class="form-label">Fecha 1ª Convocatoria:</label>
-							<input type="datetime-local" class="form-control" id="fechaJD" name="fechaJD">
+							<input type="datetime-local" class="form-control" id="fechaJD" name="fechaJD" th:field="*{date}" required>
 						</div>
 
 						<div class="input-group mb-3">
 							<div class="input-group-prepend">
 								<label class="input-group-text" for="inputGroupSelect01">Tipo de Junta:</label>
 							</div>
-							<select class="custom-select" id="inputGroupSelect01">
-								<option value="1">Ordinaria</option>
-								<option value="2">Extraordinaria</option>
+							<select class="custom-select" id="inputGroupSelect01" th:field="*{ordinary}" required>
+								<option th:value="true" >Ordinaria</option>
+								<option th:value="false" >Extraordinaria</option>
 							</select>
 						</div>
-
+						<div class="mb-3">
+							<label for="exampleFormControlInput1" class="form-label">Lugar de la JD:</label>
+							<input type="text" id="placeJD" name="placeJD" th:field="*{place}" required>
+						</div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
-					<button class="btn btn-primary" type="submit">Añadir</button>
-
+					<input class="btn btn-primary" type="submit"></input>
 					</form>
 				</div>
 			</div>
