--- a/src/main/resources/templates/admin/tokens/delegate_tokens.html
+++ b/src/main/resources/templates/admin/tokens/delegate_tokens.html
@@ -30,6 +30,7 @@
                             <th>Posición</th>
                             <th>Diferenciador</th>
                             <th>Token</th>
+                            <th>Eliminar</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -45,6 +46,9 @@
                             </td>
                             <td>
                                 <a th:href="@{'/register?token=' + ${token.token}}" th:text="${token.token}"></a>
+                            </td>
+                            <td>
+                                <a th:href="@{'/admin/tokens/delete/' + ${token.id}}"><svg width="30px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>delete</title><path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" /></svg></span></a>
                             </td>
                         </tr>
                     </tbody>
