--- a/src/main/resources/templates/admin/tokens/cd_tokens.html
+++ b/src/main/resources/templates/admin/tokens/cd_tokens.html
@@ -28,6 +28,8 @@
                         <tr>
                             <th>Departamento</th>
                             <th>Token</th>
+                            <th>Eliminar</th>
+                            <th>Regenerar</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -37,6 +39,12 @@
                             </td>
                             <td>
                                 <a th:href="@{'/register?token=' + ${token.token}}" th:text="${token.token}"></a>
+                            </td>
+                            <td>
+                                <a th:href="@{'/admin/tokens/deletecd/' + ${token.id}}"><svg width="30px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>delete</title><path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" /></svg></span></a>
+                            </td>
+                            <td>
+                                <a th:href="@{'/admin/tokens/regeneratecd/' + ${token.id}}"><svg width="30px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>reload</title><path d="M2 12C2 16.97 6.03 21 11 21C13.39 21 15.68 20.06 17.4 18.4L15.9 16.9C14.63 18.25 12.86 19 11 19C4.76 19 1.64 11.46 6.05 7.05C10.46 2.64 18 5.77 18 12H15L19 16H19.1L23 12H20C20 7.03 15.97 3 11 3C6.03 3 2 7.03 2 12Z" /></svg></span></a>
                             </td>
                         </tr>
                     </tbody>
