FIxed template links

--- a/src/main/resources/templates/admin/census/index.html
+++ b/src/main/resources/templates/admin/census/index.html
@@ -62,5 +62,5 @@
     <script th:src="@{/js/jquery.dataTables.min.js}"></script>
     <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
     <script th:src="@{/js/dataTables.bootstrap5.min.js}"></script>
-    <script th:src="@{/js/adminFunctions.js}"></script>
+    <script th:src="@{/js/admin/adminFunctions.js}"></script>
 </body>
