--- a/src/main/resources/templates/admin/tokens/cd_tokens.html
+++ b/src/main/resources/templates/admin/tokens/cd_tokens.html
@@ -23,7 +23,7 @@
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12 col-md-10 col-lg-8 col-xl-8">
 
-                <table id="census" class="table table-striped table-hover" style="width:100%">
+                <table id="tokensTable" class="table table-striped table-hover" style="width:100%">
                     <thead>
                         <tr>
                             <th>Departamento</th>
@@ -49,6 +49,7 @@
                         </tr>
                     </tbody>
                 </table>
+                <a href="/admin/tokens">Volver</a>
 
             </div>
         </div>
@@ -56,9 +57,10 @@
     </div>
 
     <script th:src="@{/js/jquery-3.6.3.min.js}"></script>
+    <script th:src="@{/js/jquery.dataTables.min.js}"></script>
     <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
     <script th:src="@{/js/dataTables.bootstrap5.min.js}"></script>
-    <script th:src="@{/js/adminFunctions.js}"></script>
+    <script th:src="@{/js/admin/adminFunctions.js}"></script>
 </body>
 
 </html>
