--- a/src/main/resources/templates/profileview.html
+++ b/src/main/resources/templates/profileview.html
@@ -36,6 +36,14 @@
                             </div>
                         </div>
                     </div>
+                    <br/>
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex flex-column align-items-center text-center">
+                                <a href="/jd">Sesiones de la JD</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-8">
                     <div class="card mb-3">
